log
Fri, Mar 28, 2025 11:36:36 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Fri, Mar 28, 2025 11:41:52 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
1eb5fe7
Fri, Mar 28, 2025 11:43:30 AM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
6ca4e92
Fri, Mar 28, 2025 11:51:42 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e0bd532
Fri, Mar 28, 2025 11:52:18 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:45:12: error: incompatible types when returning type 'Node {aka struct Node}' but 'void *' was expected
     return *(list->head);
            ^~~~~~~~~~~~~
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
762d3a4
Fri, Mar 28, 2025 11:52:36 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cd6d790
Fri, Mar 28, 2025 11:53:51 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:44:16: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     int *aux = list->head;
                ^~~~
list.c:45:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return *aux;
            ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7f1146b
Fri, Mar 28, 2025 11:54:21 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:44:16: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     int *aux = list->head;
                ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2655606
Fri, Mar 28, 2025 11:56:09 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a944e0c
Fri, Mar 28, 2025 10:31:42 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cade46a
Fri, Mar 28, 2025 10:40:56 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
eadedbc
Fri, Mar 28, 2025 10:46:46 PM: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
be4db4b
Fri, Mar 28, 2025 10:50:28 PM: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
57e2aa6
Fri, Mar 28, 2025 11:02:11 PM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
c7ae1cb
Fri, Mar 28, 2025 11:04:23 PM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
85e848a
